force-app/main/default/objects/SIS_Learning_Hour__c/SIS_Learning_Hour__c.object-meta.xml
<CustomObject>
    <label>Heure d&apos;apprentissage</label>
    <nameField>
        <displayFormat>LH-{0000}</displayFormat>
        <label>Nom de l&apos;enregistrement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Heures d&apos;apprentissage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>