force-app/main/default/objects/SIS_Learning_Hour__c/fields/SIS_Distribution__c.field-meta.xml
<CustomField>
    <fullName>SIS_Distribution__c</fullName>
    <inlineHelpText>En heures</inlineHelpText>
    <label>Distribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>