force-app/main/default/objects/SIS_Learning_Hour__c/fields/SIS_Type__c.field-meta.xml
<CustomField>
    <fullName>SIS_Type__c</fullName>
    <description>Choisir un type d&apos;heures d&apos;apprentissage puis renseigner son volume</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face-à-face</fullName>
                <label>Présentiel</label>
            </value>
            <value>
                <fullName>Individuel sans mentorat</fullName>
                <label>Travail individuel sans tutorat</label>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Groupe sans mentorat</fullName>
                <label>Travail en groupe sans tutorat</label>
            </value>
            <value>
                <fullName>Travail en ligne</fullName>
            </value>
            <value>
                <fullName>Travail individuel avec tutorat</fullName>
            </value>
            <value>
                <fullName>Travail en groupe avec tutorat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>